namespace Courses.Domain.Enums;

public enum CourseItemStatus
{
    Draft,
    NeedsContent,
    Ready,
    Published,
    Archived
}
