namespace Courses.Domain.Enums;

public enum CourseOrderType
{
    Sequential,
    Free
}
